# tgc-dl

./: .gitignore  LICENSE  README.md  pyproject.toml  tgc-dl.py
tgc_dl/: download.py  exceptions.py  main.py  types.py
