[project]
name = "tgc-dl"
description = "Download courses from The Great Courses Plus."
readme = "README.md"
version = "1.0.1"
requires-python = ">=3.10,<4.0"
dependencies = [
    "bs4>=0.0.2",
    "m3u8>=6.0.0",
    "more-itertools>=10.7.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "yt-dlp",
]

[project.scripts]
tgc-dl = "tgc_dl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
